--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Set PYTHON_HOME
         run: echo "PYTHON_HOME=${{ steps.setup_python.outputs.python-path }}" >> $GITHUB_ENV
       - name: Build
-        run: mvn -V -U package
+        run: mvn -V -B package
