--- a/wrapper-java/pom.xml
+++ b/wrapper-java/pom.xml
@@ -148,7 +148,7 @@
                 </os>
             </activation>
             <properties>
-                <jexstract>${project.basedir}/../jextract/bin/jextract</jexstract>
+                <jextract>${project.basedir}/../jextract/bin/jextract</jextract>
             </properties>
         </profile>
     </profiles>
