- switch to macos x86_64 architecture

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os:
+          - ubuntu-latest
+          - windows-latest
+          # - macos-latest FFI in native-iamge is not yet supported on aarch64
+          - macos-13 # x86_64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
