--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,21 +12,22 @@ jobs:
           - ubuntu-latest
           - windows-latest
           # - macos-latest FFI in native-iamge is not yet supported on aarch64
-          - macos-13 # x86_64
+          - macos-15-intel # x86_64
+          - macos-15 # aarch64
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Setup Java
         uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '23'
+          java-version: '25'
           distribution: 'graalvm-community'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache: 'maven'
       - name: Setup Python
         id: setup_python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: '3.13'
       - name: Build
